--- a/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
+++ b/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
+    <title>FL Story</title>
     <style>
         @media all and (max-width:1000px){
             .about {
@@ -13,7 +14,6 @@
 
         body{
             margin: 0;
-            font-family: "Open Sans", Arial, sans-serif;
             font-size: 14px;
         }
 
@@ -39,7 +39,7 @@
 
         .about li{
             display: inline-block;
-            font-size: 14px;
+            font-size: 20px;
             width: 25%;
             margin-bottom: 50px;
             text-align: center;
@@ -61,6 +61,7 @@
             text-align: center;
             line-height: 0;
             margin-bottom: 20px;
+            font-weight: 400;
         }
 
         p.title{
@@ -68,53 +69,34 @@
             font-size: 30px;
             margin-bottom: 40px;
         }
+        .price{
+            margin-bottom: 50px;
+        }
 
         .price p{
+            line-height: 25px;
             text-align: center;
             font-size: 30px;
         }
 
+        .price p.plus{
+            font-size: 40px;
+        }
+
+        .price p .mount{
+            font-size: 24px;
+        }
+
         .price p img{
             display: inline-block;
-            max-height: 30px;
-            width: 30px;
+            max-height: 20px;
+            width: 20px;
         }
 
         .price img{
-            max-height: 300px;
+            max-height: 350px;
             width: 100%;
-        }
-
-        .footer {
-            background-color: #B80257;
-            height: 100px;
-            width: 100%;
-        }
-
-        .subscribe-form {
-            padding: 30px;
-            border: 2px solid #e6e6e6;
-            height: 300px;
-        }
-
-        .form h2 {
-            font-size: 36px;
-            text-align: center;
-            text-transform: uppercase;
-            margin-bottom: 30px;
-        }
-
-        .form {
-            height: 400px;
-            width: 100%;
-        }
-
-        .form input{
-            margin: 20px;
-        }
-
-        .form button{
-            margin: 20px auto;
+            margin-bottom: 20px;
         }
 
         hr{
@@ -124,21 +106,154 @@
 
         .join {
             background-color: #F3D0EE;
-            height: 340px;
+            /*height: 340px;*/
             width: 100%;
-            margin-bottom: 20px;
+            /*margin-bottom: 20px;*/
+            padding-top: 10px;
+            padding-bottom: 30px;
         }
 
         .join h2{
-            padding-top: 40px;
-            margin-bottom: 30px;
             font-size: 36px;
             text-align: center;
             text-transform: uppercase;
+            margin-bottom: 20px;
         }
 
         .join p{
+            line-height: 30px;
             font-size: 20px;
+            text-align: justify
+        }
+
+        .form {
+            width: 60%;
+            margin-bottom: 60px;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
+        .form button{
+            display: block;
+            font-size: 20px;
+            margin-top: 40px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 300px;
+        }
+
+        .form .subscribe-form {
+            padding: 30px;
+            border: 2px solid #e6e6e6;
+        }
+
+        .form h2 {
+            font-size: 36px;
+            text-align: center;
+            text-transform: uppercase;
+            margin-bottom: 30px;
+        }
+
+        .form input{
+            font-family: "Open Sans", Arial, sans-serif;
+            font-size:20px;
+            width: 75%;
+            margin-bottom: 20px;
+            display: inline-block;
+        }
+
+        .form .title{
+            font-family: "Open Sans", Arial, sans-serif;
+            font-size:20px;
+            padding-top: 10px;
+            width: 20%;
+            display: inline-block;
+            text-align: center;
+        }
+
+        .form .sign{
+            width: 3%;
+            text-align: center;
+            font-size:20px;
+            color: red;
+            display: none;
+        }
+
+        .form .sign:hover{
+            cursor: help
+        }
+
+        .btn-primary {
+            background-color: #B80257;
+            border-color: #B80257;
+            color: #ffffff;
+        }
+
+        .btn-primary:hover,
+        .btn-primary:active:hover,
+        .btn-primary:active,
+        .btn-primary:active:focus,
+        .btn-primary:disabled:focus,
+        .btn-primary:disabled,
+        .btn-primary:disabled:hover,
+        .btn-primary:focus{
+            background-color: #7A0257;
+            border-color: #7A0257;
+            color: #ffffff;
+        }
+
+        .btn-primary img{
+            display:none;
+        }
+
+        .btn-primary.load {
+            background-color: #7A0257;
+            border-color: #7A0257;
+            color: #ffffff;
+        }
+
+        .btn-primary.load span{
+            display:none;
+        }
+        .btn-primary.load img{
+            display:inline;
+        }
+
+        .form .error .sign{
+            display: inline-block;
+        }
+        .form .error input{
+            border-color: red;
+        }
+
+        .join a{
+            font-style: italic;
+        }
+
+        .footer {
+            background-color: #B80257;
+            height: 100px;
+            width: 100%;
+        }
+
+        .footer p{
+            font-size:14px;
+            color: #ffffff;
+            line-height: 10px;
+        }
+
+        .footer .left{
+            padding-top:10px;
+            display: inline;
+            float: left;
+            text-align: left;
+        }
+
+        .footer .right{
+            padding-top:10px;
+            display: inline-block;
+            float: right;
+            text-align: right;
         }
 
     </style>
@@ -146,62 +261,62 @@
 <body>
 <div class="header">
     <div class="content">
-        <p>FLStory</p>
+        <p>FL Story</p>
     </div>
 </div>
 <div class="content">
 
-    <h1>Газета FLStory</h1>
+    <h1>FL Story</h1>
     <p class="title">газета обо всем, что интересно современной женщине</p>
 
     <ul class="about">
         <li>
-            <img src="{{ asset('img/sections/art.svg') }}">
-            <p>Искусство</p>
-        </li>
-        <li>
             <img src="{{ asset('img/sections/bussnes.svg') }}">
-            <p>Искусство</p>
-        </li>
-        <li>
-            <img src="{{ asset('img/sections/grow.svg') }}">
-            <p>Искусство</p>
-        </li>
-        <li>
-            <img src="{{ asset('img/sections/beauty.svg') }}">
-            <p>Искусство</p>
+            <p>Бизнес</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/art.svg') }}">
-            <p>Искусство</p>
+            <p>Культура</p>
         </li>
         <li>
-            <img src="{{ asset('img/sections/bussnes.svg') }}">
-            <p>Искусство</p>
+            <img src="{{ asset('img/sections/family.svg') }}">
+            <p>Семья</p>
         </li>
         <li>
-            <img src="{{ asset('img/sections/grow.svg') }}">
-            <p>Искусство</p>
+            <img src="{{ asset('img/sections/history.svg') }}">
+            <p>История</p>
         </li>
         <li>
-            <img src="{{ asset('img/sections/beauty.svg') }}">
-            <p>Искусство</p>
+            <img src="{{ asset('img/sections/sport.svg') }}">
+            <p>Спорт</p>
         </li>
         <li>
-            <img src="{{ asset('img/sections/art.svg') }}">
-            <p>Искусство</p>
+            <img src="{{ asset('img/sections/traveling.svg') }}">
+            <p>Путешествия</p>
         </li>
         <li>
-            <img src="{{ asset('img/sections/bussnes.svg') }}">
-            <p>Искусство</p>
-        </li>
-        <li>
-            <img src="{{ asset('img/sections/grow.svg') }}">
-            <p>Искусство</p>
+            <img src="{{ asset('img/sections/style.svg') }}">
+            <p>Мода</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/beauty.svg') }}">
-            <p>Искусство</p>
+            <p>Красота</p>
+        </li>
+        <li>
+            <img src="{{ asset('img/sections/grow.svg') }}">
+            <p>Личный рост</p>
+        </li>
+        <li>
+            <img src="{{ asset('img/sections/actions.svg') }}">
+            <p>Значительные события</p>
+        </li>
+        <li>
+            <img src="{{ asset('img/sections/meet.svg') }}">
+            <p>Встречи</p>
+        </li>
+        <li>
+            <img src="{{ asset('img/sections/handmade.svg') }}">
+            <p>Рукоделие</p>
         </li>
     </ul>
 
@@ -209,84 +324,104 @@
 
     <div class="price">
         <img src="{{ asset('img/computer.svg') }}">
-        <p>Год за 500 <img class="ruble" src="{{ asset('img/mount.svg') }}"></p>
-        <p>+</p>
-        <p>Первый выпуск в подарок</p>
+        <p>Подписка</p>
+        <p>на 1 год за 500 <span class="mount">&#8381;</span></p>
+        <p class="plus">+</p>
+        <p>Первый эксклюзивный</p>
+        <p>выпуск в подарок!</p>
     </div>
-
-    <hr>
 </div>
 
 
 <div class="join">
     <div class="content">
         <h2>Присоединиться к проекту</h2>
-        <p>Друзья, присылайте свои истории успеха, информацию о предстоящих событиях в вашем регионе, фото о проделанной работе, фотоочеты ваших путешествий и семинаров, воспоминания о торжественных событиях, интересные истории из жизни ваших  бизнес структур и  поздравления с закрытием статусов, поздравления и фото именинников, интересные заметки и художественные произведения, фото ваших творческих работ и многое другое  в редакцию по адресу : medgora_faberlic@mail.ru </p>
+        <p>Друзья, присылайте свои истории успеха, информацию о предстоящих событиях в вашем регионе,
+            фото о проделанной работе, фотоочеты ваших путешествий и семинаров, воспоминания о
+            торжественных событиях, интересные истории из жизни ваших  бизнес структур и
+            поздравления с закрытием статусов, поздравления и фото именинников, интересные
+            заметки и художественные произведения, фото ваших творческих работ и многое другое
+            в редакцию по адресу <a href="mailto:{{ mail }}">{{ mail }}</a></p>
     </div>
 </div>
 
-<div class="content">
-    <div class="form">
-        <h2>данные подписчика</h2>
-        <div class="subscribe-form">
-            <input type="text" class="form-control name">
-            <input type="email" class="form-control email">
-            <button type="button" class="btn btn-primary" id="subscribe">Подписаться</button>
+<div class="form">
+    <h2>данные подписчика</h2>
+    <div class="subscribe-form">
+        <div class="name">
+            <div class="title">ФИО</div>
+            <input type="text" class="form-control" placeholder="Иванова Мария Ивановна">
+            <div class="sign" title="Поле не может быть пустым">!</div>
+        </div>
+
+        <div class="email">
+            <div class="title">Почта</div>
+            <input type="email" id="email" class="form-control" placeholder="mail@mail.ru">
+            <div class="sign" title="Поле должно содержать адрес электронной почты">!</div>
+        </div>
+
+        <button type="button" class="btn btn-primary" id="subscribe"><span>Подписаться</span><img src="{{ asset('img/loader.gif') }}"></button>
+    </div>
+</div>
+<div class="footer">
+    <div class="content">
+        <div class="left">
+            <p>Газета "FL Story, Фаберлик Северо-запад"</p>
+            <p>Учредитель: Павлова Ю.А.</p>
+        </div>
+        <div class="right">
+            <p>186350 г. Медвежьегорск</p>
+            <p>ул Труда, дом 1</p>
+            <p>тел. 8-960-212-78-69</p>
+            <p><a href="mailto:{{ mail }}">{{ mail }}</a></p>
         </div>
     </div>
 </div>
-<div class="footer"></div>
-
-{#<div class="container-fluid">#}
-{#<div class="col-md-8 col-md-offset-2" style="height: 500px;background-color: #1a6ecc">#}
-{#<div class="subscribe col-md-10 col-md-offset-1" style="padding-top: 100px">#}
-{#<input type="text" class="form-control name">#}
-{#<input type="email" class="form-control email">#}
-{#<button type="button" class="btn btn-primary form-control" id="subscribe">Подписаться</button>#}
-{#</div>#}
-{#</div>#}
-{#</div>#}
-
-{#<div class="container-fluid">#}
-{#<div class="col-md-8 col-md-offset-2" style="height: 500px;background-color: #7A1DE8">#}
-{#<div class="support col-md-10 col-md-offset-1" style="padding-top: 100px">#}
-{#<input type="email" class="form-control email">#}
-{#<textarea  class="form-control body"></textarea>#}
-{#<button type="button" class="btn btn-primary form-control" id="support">Отправить</button>#}
-{#</div>#}
-{#</div>#}
-{#</div>#}
 
 </body>
 </html>
 <script>
     var subscribe = function () {
 
-        var _name = $('.subscribe-form .name').val();
-        var _email = $('.subscribe-form .email').val();
+        var _name = $('.subscribe-form .name input').val();
+        var _email = $('.subscribe-form .email input').val();
 
         var isValid = function () {
             var valid = true;
             if ('undefined' === typeof _name || 0 === _name.length) {
                 valid = false;
-                console.info('wrong name');
+                $('.subscribe-form .name').addClass('error');
+            } else{
+                $('.subscribe-form .name').removeClass('error');
             }
 
             var regexp = new RegExp(/.+@.+\..+/);
 
             if ('undefined' === typeof _email || 0 === _email.length || !regexp.test(_email)) {
                 valid = false;
-                console.info('wrong email');
+                $('.subscribe-form .email').addClass('error');
+            } else{
+                $('.subscribe-form .email').removeClass('error');
             }
 
             return valid;
         };
+
+        var remoceClassError = function(){
+            $(this).parent().removeClass('error');
+        };
+
+        $('.subscribe-form .name input').on('keypress', remoceClassError);
+        $('.subscribe-form .email input').on('keypress', remoceClassError);
 
         var create = function () {
 
             if (!isValid()) {
                 return;
             }
+
+            $('.subscribe-form button').prop('disabled', true);
+            $('.subscribe-form button').addClass('load');
 
             $.ajax({
                 url: "{{ url('subscribe') }}",
@@ -296,7 +431,7 @@
                     email: _email
                 })
             }).done(function (data) {
-                console.info(data);
+                console.info('done');
                 pay(data);
             });
         };
@@ -317,54 +452,11 @@
                 }
             }
             document.body.appendChild(form);
+            console.info('submit');
             form.submit();
         };
 
         create();
     };
-
-    var support = function () {
-        var _body = $('.support .body').val();
-        var _email = $('.support .email').val();
-
-        var isValid = function () {
-            var valid = true;
-            if ('undefined' === typeof _body || 0 === _body.length) {
-                valid = false;
-                console.info('wrong body');
-            }
-
-            var regexp = new RegExp(/.+@.+\..+/);
-
-            if ('undefined' === typeof _email || 0 === _email.length || !regexp.test(_email)) {
-                valid = false;
-                console.info('wrong email');
-            }
-
-            return valid;
-        };
-
-        var create = function () {
-
-            if (!isValid()) {
-                return;
-            }
-
-            $.ajax({
-                url: "{{ url('mail_to_support') }}",
-                method: 'POST',
-                data: ({
-                    body: _body,
-                    email: _email
-                })
-            }).done(function (data) {
-                console.info(data);
-            });
-        };
-
-        create();
-    };
-
     $('#subscribe').on('click', subscribe);
-    $('#support').on('click', support);
 </script>
