--- a/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
+++ b/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
@@ -2,42 +2,60 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}">
     <title>FL Story</title>
     <style>
-        @media all and (max-width:1000px){
-            .about {
-                display: none;
-            }
-        }
 
-        body{
+        body {
             margin: 0;
-            font-size: 14px;
-        }
-
-        .header {
-            background-color: #B80257;
-            height: 100px;
-            width: 100%;
-            margin-bottom: 40px;
-        }
-
-        .header p {
-            padding-top: 10px;
+            padding: 0;
+            font-size: 20px;
             font-family: "Open Sans", Arial, sans-serif;
-            font-size: 50px;
-            color: white;
-            margin-bottom: 40px;
         }
 
-        .content {
+        .width {
             width: 80%;
             margin: 0 auto;
         }
 
-        .about li{
+        h1 {
+            font-size: 50px;
+            text-align: center;
+            font-weight: 400;
+        }
+
+        h2 {
+            font-size: 35px;
+            text-align: center;
+            font-weight: 400;
+        }
+
+        hr {
+            border-color: black;
+        }
+
+        header {
+            background-color: #B80257;
+            height: 100px;
+            width: 100%;
+        }
+
+        header p {
+            line-height: 100px;
+            font-size: 50px;
+            color: white;
+        }
+
+        ul {
+            list-style-type: none;
+            padding-top: 40px;
+            padding-left: 0;
+            font-size: 0;
+        }
+
+        li {
             display: inline-block;
             font-size: 20px;
             width: 25%;
@@ -45,142 +63,91 @@
             text-align: center;
         }
 
-        .about li img {
+        li img {
             max-height: 150px;
             width: 100%;
         }
 
-        ul.about {
-            list-style-type: none;
-            margin-bottom: 50px;
-            font-size: 0;
+        .subscribe {
+            padding-top: 50px;
+            padding-bottom: 40px;
         }
 
-        h1{
-            font-size: 36px;
-            text-align: center;
-            line-height: 0;
-            margin-bottom: 20px;
-            font-weight: 400;
+        .subscribe h2 {
+            margin-top: 0;
         }
 
-        p.title{
-            text-align: center;
-            font-size: 30px;
-            margin-bottom: 40px;
-        }
-        .price{
-            margin-bottom: 50px;
+        .subscribe h2.plus {
+            margin-bottom: 0;
         }
 
-        .price p{
-            line-height: 25px;
-            text-align: center;
-            font-size: 30px;
-        }
-
-        .price p.plus{
-            font-size: 40px;
-        }
-
-        .price p .mount{
-            font-size: 24px;
-        }
-
-        .price p img{
-            display: inline-block;
-            max-height: 20px;
-            width: 20px;
-        }
-
-        .price img{
+        .subscribe img {
             max-height: 350px;
             width: 100%;
             margin-bottom: 20px;
         }
 
-        hr{
-            border-color: black;
-            height: 10px;
-        }
-
         .join {
             background-color: #F3D0EE;
-            /*height: 340px;*/
             width: 100%;
-            /*margin-bottom: 20px;*/
-            padding-top: 10px;
-            padding-bottom: 30px;
+            padding-top: 20px;
+            padding-bottom: 40px;
         }
 
-        .join h2{
-            font-size: 36px;
-            text-align: center;
+        .join h2 {
             text-transform: uppercase;
-            margin-bottom: 20px;
         }
 
-        .join p{
+        .join p {
             line-height: 30px;
             font-size: 20px;
-            text-align: justify
+            text-align: left
+        }
+
+        .join a {
+            font-style: italic;
         }
 
         .form {
             width: 60%;
-            margin-bottom: 60px;
+            padding-top: 20px;
+            padding-bottom: 50px;
             margin-right: auto;
             margin-left: auto;
-        }
-
-        .form button{
-            display: block;
-            font-size: 20px;
-            margin-top: 40px;
-            margin-left: auto;
-            margin-right: auto;
-            width: 300px;
-        }
-
-        .form .subscribe-form {
-            padding: 30px;
-            border: 2px solid #e6e6e6;
+            font-size: 0;
         }
 
         .form h2 {
-            font-size: 36px;
-            text-align: center;
             text-transform: uppercase;
-            margin-bottom: 30px;
+            padding-bottom: 20px;
         }
 
-        .form input{
-            font-family: "Open Sans", Arial, sans-serif;
-            font-size:20px;
-            width: 75%;
-            margin-bottom: 20px;
+        .form button {
+            display: block;
+            font-size: 20px;
+            text-align: center;
+            padding-left: 0;
+            padding-right: 0;
+            margin-top: 40px;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 300px;
+            width: 80%;
+        }
+
+        .form input {
+            font-size: 20px;
+            width: 80%;
             display: inline-block;
+            margin-bottom: 20px;
         }
 
-        .form .title{
-            font-family: "Open Sans", Arial, sans-serif;
-            font-size:20px;
+        .form label {
+            font-size: 20px;
             padding-top: 10px;
             width: 20%;
             display: inline-block;
             text-align: center;
-        }
-
-        .form .sign{
-            width: 3%;
-            text-align: center;
-            font-size:20px;
-            color: red;
-            display: none;
-        }
-
-        .form .sign:hover{
-            cursor: help
         }
 
         .btn-primary {
@@ -196,14 +163,14 @@
         .btn-primary:disabled:focus,
         .btn-primary:disabled,
         .btn-primary:disabled:hover,
-        .btn-primary:focus{
+        .btn-primary:focus {
             background-color: #7A0257;
             border-color: #7A0257;
             color: #ffffff;
         }
 
-        .btn-primary img{
-            display:none;
+        .btn-primary img {
+            display: none;
         }
 
         .btn-primary.load {
@@ -212,207 +179,244 @@
             color: #ffffff;
         }
 
-        .btn-primary.load span{
-            display:none;
-        }
-        .btn-primary.load img{
-            display:inline;
+        .btn-primary.load span {
+            display: none;
         }
 
-        .form .error .sign{
-            display: inline-block;
+        .btn-primary.load img {
+            display: inline;
         }
-        .form .error input{
+
+        .form .error input {
             border-color: red;
         }
 
-        .join a{
-            font-style: italic;
-        }
-
-        .footer {
+        footer {
             background-color: #B80257;
             height: 100px;
             width: 100%;
         }
 
-        .footer p{
-            font-size:14px;
+        footer p {
+            font-size: 14px;
             color: #ffffff;
             line-height: 10px;
         }
 
-        .footer .left{
-            padding-top:10px;
+        footer .left {
+            padding-top: 10px;
             display: inline;
             float: left;
             text-align: left;
         }
 
-        .footer .right{
-            padding-top:10px;
+        footer .right {
+            padding-top: 10px;
             display: inline-block;
             float: right;
             text-align: right;
         }
 
+        @media all and (max-width: 1000px) {
+            ul {
+                display: none;
+            }
+            .form label {
+                display: none;
+            }
+            .form{
+                width: 90%;
+            }
+            .form input {
+                width: 100%;
+            }
+            .width {
+                width: 90%;
+            }
+        }
+
     </style>
 </head>
 <body>
-<div class="header">
-    <div class="content">
+<header>
+    <div class="width">
         <p>FL Story</p>
     </div>
-</div>
-<div class="content">
+</header>
+<content>
 
     <h1>FL Story</h1>
-    <p class="title">газета обо всем, что интересно современной женщине</p>
 
-    <ul class="about">
+    <h2>газета обо всем, что интересно современной женщине</h2>
+
+    <ul class="width">
         <li>
             <img src="{{ asset('img/sections/bussnes.svg') }}">
+
             <p>Бизнес</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/art.svg') }}">
+
             <p>Культура</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/family.svg') }}">
+
             <p>Семья</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/history.svg') }}">
+
             <p>История</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/sport.svg') }}">
+
             <p>Спорт</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/traveling.svg') }}">
+
             <p>Путешествия</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/style.svg') }}">
+
             <p>Мода</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/beauty.svg') }}">
+
             <p>Красота</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/grow.svg') }}">
+
             <p>Личный рост</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/actions.svg') }}">
+
             <p>Значительные события</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/meet.svg') }}">
+
             <p>Встречи</p>
         </li>
         <li>
             <img src="{{ asset('img/sections/handmade.svg') }}">
+
             <p>Рукоделие</p>
         </li>
     </ul>
 
-    <hr>
+    <hr class="width">
 
-    <div class="price">
+    <div class="subscribe width">
         <img src="{{ asset('img/computer.svg') }}">
-        <p>Подписка</p>
-        <p>на 1 год за 500 <span class="mount">&#8381;</span></p>
-        <p class="plus">+</p>
-        <p>Первый эксклюзивный</p>
-        <p>выпуск в подарок!</p>
+
+        <h2>Подписка</h2>
+
+        <h2>на 1 год за 500 <span class="mount">&#8381;</span></h2>
+
+        <h2 class="plus">+</h2>
+
+        <h2>Первый эксклюзивный</h2>
+
+        <h2>выпуск в подарок!</h2>
     </div>
-</div>
 
+    <div class="join">
+        <div class="width">
+            <h2>Присоединиться к проекту</h2>
 
-<div class="join">
-    <div class="content">
-        <h2>Присоединиться к проекту</h2>
-        <p>Друзья, присылайте свои истории успеха, информацию о предстоящих событиях в вашем регионе,
-            фото о проделанной работе, фотоочеты ваших путешествий и семинаров, воспоминания о
-            торжественных событиях, интересные истории из жизни ваших  бизнес структур и
-            поздравления с закрытием статусов, поздравления и фото именинников, интересные
-            заметки и художественные произведения, фото ваших творческих работ и многое другое
-            в редакцию по адресу <a href="mailto:{{ mail }}">{{ mail }}</a></p>
+            <p>Друзья, присылайте свои истории успеха, информацию о предстоящих событиях в вашем регионе,
+                фото о проделанной работе, фотоочеты ваших путешествий и семинаров, воспоминания о
+                торжественных событиях, интересные истории из жизни ваших бизнес структур и
+                поздравления с закрытием статусов, поздравления и фото именинников, интересные
+                заметки и художественные произведения, фото ваших творческих работ и многое другое
+                в редакцию по адресу <a href="mailto:{{ mail }}">{{ mail }}</a></p>
+        </div>
     </div>
-</div>
 
-<div class="form">
-    <h2>данные подписчика</h2>
-    <div class="subscribe-form">
+    <div class="form">
+
+        <h2>данные подписчика</h2>
+
         <div class="name">
-            <div class="title">ФИО</div>
-            <input type="text" class="form-control" placeholder="Иванова Мария Ивановна">
-            <div class="sign" title="Поле не может быть пустым">!</div>
+            <label for="name">ФИО</label>
+            <input type="text" class="form-control" id="name" placeholder="Иванова Мария Ивановна">
+            <div class="err-message">Поле не может быть пустым</div>
         </div>
 
         <div class="email">
-            <div class="title">Почта</div>
+            <label for="email">Почта</label>
             <input type="email" id="email" class="form-control" placeholder="mail@mail.ru">
-            <div class="sign" title="Поле должно содержать адрес электронной почты">!</div>
+            <div class="err-message">Поле должно содержать адрес электронной почты</div>
         </div>
 
-        <button type="button" class="btn btn-primary" id="subscribe"><span>Подписаться</span><img src="{{ asset('img/loader.gif') }}"></button>
+        <button type="button" class="btn btn-primary" id="subscribe"><span>Подписаться</span><img
+                    src="{{ asset('img/loader.gif') }}"></button>
     </div>
-</div>
-<div class="footer">
-    <div class="content">
+
+
+</content>
+<footer>
+    <div class="width">
         <div class="left">
             <p>Газета "FL Story, Фаберлик Северо-запад"</p>
+
             <p>Учредитель: Павлова Ю.А.</p>
         </div>
         <div class="right">
             <p>186350 г. Медвежьегорск</p>
+
             <p>ул Труда, дом 1</p>
+
             <p>тел. 8-960-212-78-69</p>
+
             <p><a href="mailto:{{ mail }}">{{ mail }}</a></p>
         </div>
     </div>
-</div>
+</footer>
 
 </body>
 </html>
 <script>
     var subscribe = function () {
 
-        var _name = $('.subscribe-form .name input').val();
-        var _email = $('.subscribe-form .email input').val();
+        var _name = $('#name').val();
+        var _email = $('#email').val();
 
         var isValid = function () {
             var valid = true;
             if ('undefined' === typeof _name || 0 === _name.length) {
                 valid = false;
-                $('.subscribe-form .name').addClass('error');
-            } else{
-                $('.subscribe-form .name').removeClass('error');
+                $('.form .name').addClass('error');
+            } else {
+                $('.form .name').removeClass('error');
             }
 
             var regexp = new RegExp(/.+@.+\..+/);
 
             if ('undefined' === typeof _email || 0 === _email.length || !regexp.test(_email)) {
                 valid = false;
-                $('.subscribe-form .email').addClass('error');
-            } else{
-                $('.subscribe-form .email').removeClass('error');
+                $('.form .email').addClass('error');
+            } else {
+                $('.form .email').removeClass('error');
             }
 
             return valid;
         };
 
-        var remoceClassError = function(){
+        var remoceClassError = function () {
             $(this).parent().removeClass('error');
         };
 
-        $('.subscribe-form .name input').on('keypress', remoceClassError);
-        $('.subscribe-form .email input').on('keypress', remoceClassError);
+        $('.form .name input').on('keypress', remoceClassError);
+        $('.form .email input').on('keypress', remoceClassError);
 
         var create = function () {
 
@@ -420,8 +424,8 @@
                 return;
             }
 
-            $('.subscribe-form button').prop('disabled', true);
-            $('.subscribe-form button').addClass('load');
+            $('.form button').prop('disabled', true);
+            $('.form button').addClass('load');
 
             $.ajax({
                 url: "{{ url('subscribe') }}",
