--- a/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
+++ b/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
@@ -67,6 +67,7 @@
 
         li img {
             max-height: 150px;
+            height: 100%;
             width: 100%;
         }
 
@@ -85,6 +86,7 @@
 
         .subscribe img {
             max-height: 350px;
+            height: 100%;
             width: 100%;
             margin-bottom: 20px;
         }
@@ -364,7 +366,7 @@
     <hr class="width">
 
     <div class="subscribe width">
-        <svg src="{{ asset('img/computer.svg') }}">
+        <img src="{{ asset('img/computer.svg') }}">
 
         <h2>Подписка</h2>
 
