--- a/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
+++ b/src/Mrsuh/NewspaperBundle/Resources/views/Default/index.html.twig
@@ -429,9 +429,9 @@
     <div class="subscribe width">
         <img src="{{ asset('img/computer.svg') }}">
 
-        <h2>Подписка</h2>
+        <h2>Выпуск №2</h2>
 
-        <h2>на 1 год за {{ price }} Р</h2>
+        <h2>за {{ price }} Р</h2>
 
         <h2 class="plus">+</h2>
 
